seedlet-blocks/style.css
/*
Theme Name: Seedlet (Blocks)
Theme URI: https://github.com/Automattic/themes-workspace/seedlet-blocks
Author: Automattic
Author URI: https://automattic.com/
Description: A simple, text-driven, single-column block-based theme.
Requires at least: 4.9.6
Tested up to: 5.4.1
Requires PHP: 7.3
Version: 1.0
License: GNU General Public License v2 or later
License URI: LICENSE
Template: seedlet
Text Domain: seedlet-blocks
Tags: one-column, flexible-header, accessibility-ready, custom-colors, custom-menu, custom-logo, editor-style, featured-images, footer-widgets, rtl-language-support, sticky-post, threaded-comments, translation-ready

Seedlet Blocks WordPress Theme, (C) 2020 Automattic, Inc.
Seedlet Blocks is distributed under the terms of the GNU GPL.

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 2 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.
*/

.site-header h1 {
	text-align: center;
}

